# browser-video-player

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  renovate.json  test.sh
.github/workflows/: build_image.yml
src/: convert.rs  index.html  main.rs  player.rs  rnnoise.rs  routes.rs
