[package]
name = "browser-video-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0"
actix-web = "4.0.1"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
tempdir = "0.3.7"
thiserror = "1.0.31"
tokio = { version = "1.19.0", features = ["process"] }
uuid = { version = "1.1.1", features = ["v4"] }
walkdir = "2.3.2"
