[package]
name = "browser-video-player"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ureq = "3.1.4"

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3"
thiserror = "2.0.17"
tokio = { version = "1.20.4", features = ["macros", "process"] }
tokio-util = "0.7.17"
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"
